# cpp_project_template

./: CMakeLists.txt  README.md  conanfile.py  conanfile.py.jinja  copier.yml
app/: CMakeLists.txt
app/libs/: CMakeLists.txt
app/src/: CMakeLists.txt
app/src/root/: main.cpp
cmake/: all.cmake  config.cmake  config.cmake.jinja  constants.cmake  functions.cmake
common/: CMakeLists.txt
common/libs/: CMakeLists.txt
common/platform/: CMakeLists.txt
common/platform/compiler/: CMakeLists.txt
common/platform/compiler/msvc/: CMakeLists.txt
common/src/: CMakeLists.txt
common/src/root/: Foo.cpp  Foo.h
libs/: CMakeLists.txt
platform/: CMakeLists.txt
platform/compiler/: CMakeLists.txt
platform/compiler/msvc/: CMakeLists.txt
src/: CMakeLists.txt
src/root/: main.cpp
test/: CMakeLists.txt
test/libs/: CMakeLists.txt  configure_libs.cmake
test/src/: CMakeLists.txt
test/src/root/: main.cpp
